# dianwang_project

./: readme.md  settings.gradle
client_demo_aidl/: build.gradle  proguard-rules.pro
client_demo_aidl/libs/: 说明.docx
client_demo_aidl/release/: output-metadata.json
client_demo_aidl/src/: temp.txt
client_demo_aidl/src/main/: AndroidManifest.xml
client_demo_aidl/src/main/res/drawable/: avator.xml  gradient_background.xml  gray_bar.xml  ic_baseline_cancel_24.xml  ic_baseline_check_circle_24.xml  ic_cancel.xml  ic_checked.xml  ic_round_panorama_fish_eye_24.xml  password.xml  rectangle_input.xml  rounded_bg1.xml  rounded_bg2.xml  rounded_bg3.xml  rounded_bg4.xml  rounded_button_bg.xml  rounded_button_bgred.xml
client_demo_aidl/src/main/res/drawable-xxhdpi/: style_checkbox_lock.xml  style_checkbox_unlock.xml
client_demo_aidl/src/main/res/layout/: activity_demo.xml  activity_demo2.xml  activity_lunwen.xml  activity_main.xml  activity_main2.xml  activity_main3.xml  activity_main4.xml  info_setting.xml  login.xml  main.xml  record_dialog.xml
client_demo_aidl/src/main/res/values/: strings.xml  themes.xml
client_demo_aidl/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
puruiAidlLib/: .gitignore  build.gradle  proguard-rules.pro
puruiAidlLib/src/main/: AndroidManifest.xml
puruiAidlLib/src/main/assets/: best.param
puruiAidlLib/src/main/jni/: CMakeLists.txt  detect.cpp  detect.h  face_jna.bk  face_jni.cpp  native-lib.cpp  recognize.h  yolov5ncnn_jni.cpp
puruiAidlLib/src/main/res/layout/: draw_rectangle_dialog.xml
(+68 files in other folders)
